footer nav fixed and aligned

--- a/pub/css/main.css
+++ b/pub/css/main.css
@@ -107,12 +107,13 @@ header {
 
 nav ul {
     padding-left: 0;
+    padding-top: 1em;
+   
 }
 
 nav li {
-    display: inline-block;
-    width:100%
-    margin: 0 auto;
+    display: inline;
+    width:100%;
     padding-top: 1em;
 }
 
@@ -120,13 +121,18 @@ nav a {
     text-decoration: none;
     color: black;
     text-align: center;
-    
+    padding-right: 0.5em;
 }
-i {
+
+header i {
     
     font-size: 2em;
     width: 1.5em;
     height: 1.5em;
+    transform: rotate(90deg);
+    position: absolute;
+    top: 0.9em;
+    
 }
  
 header img {
@@ -171,6 +177,7 @@ article h3{
 
 time {
     text-decoration: underline;
+    color: grey;
 }
 
 a.one:link {
@@ -256,6 +263,7 @@ a.botao:active {
     text-decoration: underline;
     color: grey;
     margin-bottom: 3em;
+    margin-left: 1em;
 }
  
 /**********MOST POPULAR SECTION********/
@@ -271,7 +279,6 @@ a.botao:active {
 
 .most-popular figure {
     background-color: blue;
-    z-index: -1; 
     border-bottom: 4em solid white;
 }
 
@@ -280,20 +287,21 @@ a.botao:active {
     font-size: 1em;
     text-decoration: none;
     position:absolute;
-    padding-top: 15em;
+    padding-top: 14em;
     padding-left: 1.5em;
     font-weight:800;
 }
 
 /***********FOOTER****************/
 footer {
+    
     background-color: black;
     height: 20em;
+    
 }
 
 footer li {
     padding-top: 2em;
-    padding-left: 1em;
     color:white;
     display:inline-block;
 }
@@ -302,6 +310,7 @@ footer #nav {
     color: white;
     text-align: center;
     margin-top: -1em;
+    margin-right: 1.5em; 
 }
 
 footer img {
